=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.19_01-dev

fix $Apache::Server::Starting under dso

use ap_bfileno() instead of r->connnection->client->fd directly
[Paul J. Reder <rederpj@raleigh.ibm.com>]

fix Table.xs:table_modify() under win32
[Trung Tran-Duc <trung.tranduc@prague.ixos.cz>]

get rid of odd WRITE message in perlio.pl test if $Config{usesfio}
[John Hughes <john@calva.com>]

fix possible overwrite in perlio.c:sfapacheread() #ifdef USE_SFIO
[John Hughes <john@calva.com>]

dont use DEFAULT_PATH if r->subprocess_env->{PATH} is already set
[Bertrand Demiddelaer <wing_co@hotmail.com>]

ensure perl_setup_env() is called just once per-request
[Salvador Ortiz Garcia <sog@msg.com.mx>]

:common Apache::Constants are compiled at bootstrap time, so CVs are
shared and AUTOLOAD is avoided, which was known to cause a spin
while loading SERVER_ERROR for particular Perl errors

<Perl> sections now use 1.3.7-dev's cmd_parms->context to cure many
known, old bugs, e.g. @DirectoryIndex outside of %Location, .htaccess
and many more  [Salvador Ortiz Garcia <sog@msg.com.mx>]

fix bug where top-level PerlSetEnv's would be lost after 1st request

fix bug in Apache::ModuleConfig->get [Dave Hayes <dave@jetcafe.org>]

fix rwrite error message [Eric Cholet <cholet@logilune.com>]

Change Apache::SizeLimit so that it supports Solaris 2.6 and above
[Brian Moseley <ix@maz.org>]

Fixed apaci/load_modules.pl.PL to properly fixup log_agent and
log_referer when loaded as DSOs. [Vivek Khera <vivek@khera.org>]

Fixed apaci/mod_perl.config.sh to remove the ccdlflags from the
PERL_LIBS variable when building under bsd/os 4.x, since that causes
errors when passing "cc" oriented flags to "ld".  I suspect this
should be done for all platforms, as passing cc options to ld just
seems wrong to me.  Also fixed up Makefile.PL to override Apache's
notion of LDFLAGS_SHLIB_EXPORT to use Perl's idea of the proper flags